--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+    <form action="">
+        <div>
+            <label for="name">Name :</label><br>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div>
+            <label for="email">Email :</label><br>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div>
+            <label for="gender">Gender :</label><br>
+            <input type="radio" value="male" name="gender" required>Male<br>
+            <input type="radio" value="female" name="gender" required>Female<br>
+        </div>
+        <div>
+            <label for="topics">Laptop Brands(options) :</label>
+            <select name="topics">
+                <option value="Apple">Apple</option>
+                <option value="Asus">Asus</option>
+                <option value="HP">HP</option>
+            </select>
+        </div>
+        <div>
+            <label for="age">Age :</label><br>
+            <input type="age" id="age" name="age" required>
+        </div>
+        <div>
+            <label for="time">DOB :</label><br>
+            <input type="date" id="time" name="time" required>
+        </div>
+        <div>
+            <label for="password">Password :</label><br>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <div>
+            <input type="submit">
+        </div>
+
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
