--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <form action="">
+    <form action="" method="POST">
         <div>
             <label for="name">Name :</label><br>
             <input type="text" id="name" name="name" required>
@@ -35,8 +35,8 @@
             <input type="age" id="age" name="age" required>
         </div>
         <div>
-            <label for="time">DOB :</label><br>
-            <input type="date" id="time" name="time" required>
+            <label for="dob">DOB :</label><br>
+            <input type="date" id="dob" name="dob" required>
         </div>
         <div>
             <label for="password">Password :</label><br>
