--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <label for="topics">Laptop Brands(options) :</label>
-            <select name="topics">
+            <select name="topics" id="laptop">
                 <option value="Apple">Apple</option>
                 <option value="Asus">Asus</option>
                 <option value="HP">HP</option>
