--- a/main.html
+++ b/main.html
@@ -23,8 +23,8 @@
             <input type="radio" value="female" name="gender" required>Female<br>
         </div>
         <div>
-            <label for="topics">Laptop Brands(options) :</label>
-            <select name="topics" id="laptop">
+            <label for="laptop">Laptop Brands :</label>
+            <select name="laptop" id="laptop">
                 <option value="Apple">Apple</option>
                 <option value="Asus">Asus</option>
                 <option value="HP">HP</option>
