--- a/main.html
+++ b/main.html
@@ -1,55 +1,53 @@
 <!DOCTYPE html>
-
+ 
 <html>
-
+ 
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
 	<!-- the entire body must be written by student -->
-    <form action="" method="POST">
-        <div>
-            <label for="name">Name :</label><br>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <div>
-            <label for="email">Email :</label><br>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div>
-            <label for="gender">Gender :</label><br>
-            <input type="radio" value="male" name="gender" required>Male<br>
-            <input type="radio" value="female" name="gender" required>Female<br>
-        </div>
-        <div>
-            <label for="laptop">Laptop Brands :</label>
-            <select name="laptop" id="laptop">
-                <option value="Apple">Apple</option>
-                <option value="Asus">Asus</option>
-                <option value="HP">HP</option>
-            </select>
-        </div>
-        <div>
-            <label for="age">Age :</label><br>
-            <input type="age" id="age" name="age" required>
-        </div>
-        <div>
-            <label for="dob">DOB :</label><br>
-            <input type="date" id="dob" name="dob" required>
-        </div>
-        <div>
-            <label for="password">Password :</label><br>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div>
-            <input type="submit">
-        </div>
-
-    </form>
+	
+	<form id="my-form" method="post">
+  <label for="name">Name</label>
+  <input type="text" id="name" required>
+  <br>
+  <label for="email">Email</label>
+  <input type="email" id="email" required>
+  <br>
+  <label for="gender_m">M</label>
+  <input type="radio" id="gender_m" name="gender" required>
+  <label for="gender">F</label>
+  <input type="radio" id="gender_f" name="gender" required>
+  <br>
+  <label for="laptop">Choose your laptop brand</label>
+  <select name="laptop" id="laptop" required>
+  <option>Apple</option>
+  <option>Asus</option>
+  <option>HP</option>
+  </select>
+  <br>
+  <label for="age">Age:</label>
+  <input type="number" id="age" min="0" required>
+  <br>
+  <label for="portfolio">Portfolio</label>
+  <input type="url" name="portfolio" id="portfolio">
+  <br>
+  <label for="dob">DOB</label>
+  <input type="date" id="dob" required>
+  <br>
+  <label for="password">Password</label>
+  <input type="password" id="password" required>
+  <br>
+  <button type="submit">Submit</button>
+  </form>
+	
+ 
+ 
     <script type="text/javascript" src="./script.js">
 </script>
-
+ 
 </body>
-
+ 
 </html>
